--- a/react-front/package.json
+++ b/react-front/package.json
@@ -3,11 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^1.3.11",
+    "@material-ui/core": "^4.6.1",
+    "@material-ui/icons": "^4.5.1",
+    "@material-ui/pickers": "^3.2.8",
+    "bootstrap": "^4.3.1",
+    "date-fns": "^2.7.0",
     "material-ui-icons": "^1.0.0-beta.36",
+    "mdbootstrap": "^4.9.0",
+    "rc-time-picker": "^4.0.0-alpha.2",
     "react": "^16.11.0",
+    "react-bootstrap": "^1.0.0-beta.15",
+    "react-datetime": "^2.16.3",
     "react-dom": "^16.11.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "react-time-picker": "^3.7.2",
+    "react-timekeeper": "^2.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
