--- a/react-front/package.json
+++ b/react-front/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^16.11.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-swipeable-views": "^0.13.3",
     "react-time-picker": "^3.7.2",
     "react-timekeeper": "^2.0.4"
   },
