--- a/react-front/package.json
+++ b/react-front/package.json
@@ -11,8 +11,10 @@
     "date-fns": "^2.7.0",
     "material-ui-icons": "^1.0.0-beta.36",
     "mdbootstrap": "^4.9.0",
+    "moment": "^2.24.0",
     "rc-time-picker": "^4.0.0-alpha.2",
     "react": "^16.11.0",
+    "react-big-calendar": "^0.23.0",
     "react-bootstrap": "^1.0.0-beta.15",
     "react-datetime": "^2.16.3",
     "react-dom": "^16.11.0",
