--- a/react-front/package.json
+++ b/react-front/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "dependencies": {
     "@date-io/date-fns": "^1.3.11",
-    "@material-ui/core": "^4.6.1",
+    "@material-ui/core": "^4.7.2",
     "@material-ui/icons": "^4.5.1",
     "@material-ui/pickers": "^3.2.8",
     "bootstrap": "^4.3.1",
     "date-fns": "^2.7.0",
+    "js-cookie": "^2.2.1",
     "material-ui-icons": "^1.0.0-beta.36",
     "mdbootstrap": "^4.9.0",
     "moment": "^2.24.0",
@@ -19,6 +20,7 @@
     "react-datetime": "^2.16.3",
     "react-dom": "^16.11.0",
     "react-icons": "^3.8.0",
+    "react-grid-system": "^6.0.7",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "react-swipeable-views": "^0.13.3",
