--- a/react-front/package.json
+++ b/react-front/package.json
@@ -19,8 +19,9 @@
     "react-bootstrap": "^1.0.0-beta.15",
     "react-datetime": "^2.16.3",
     "react-dom": "^16.11.0",
-    "react-icons": "^3.8.0",
+    "react-google-login": "^5.0.7",
     "react-grid-system": "^6.0.7",
+    "react-icons": "^3.8.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "react-swipeable-views": "^0.13.3",
