--- a/react-front/package.json
+++ b/react-front/package.json
@@ -19,6 +19,7 @@
     "react-bootstrap": "^1.0.0-beta.15",
     "react-datetime": "^2.16.3",
     "react-dom": "^16.11.0",
+    "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.0.7",
     "react-grid-system": "^6.0.7",
     "react-icons": "^3.8.0",
@@ -29,7 +30,7 @@
     "react-timekeeper": "^2.0.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "HTTPS=true react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
