--- a/react-front/package.json
+++ b/react-front/package.json
@@ -30,7 +30,7 @@
     "react-timekeeper": "^2.0.4"
   },
   "scripts": {
-    "start": "HTTPS=true react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
